<resources>
    <string name="app_name">The Weakest Link</string>
    <string name="restore">Restore</string>
    <string name="zero_value">$0</string>
    <string name="bank">Bank</string>
    <string name="results">Results</string>
    <string name="accept">Accept</string>
    <string name="value_500">$500</string>
    <string name="value_1000">$1,000</string>
    <string name="value_2000">$2,000</string>
    <string name="value_5000">$5,000</string>
    <string name="value_10000">$10,000</string>
    <string name="value_15000">$15,000</string>
    <string name="value_20000">$20,000</string>
    <string name="value_25000">$25,000</string>
</resources>
