<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_chain"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio8"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="25000"
            android:text="@string/value_25000" />

        <RadioButton
            android:id="@+id/radio7"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="20000"
            android:text="@string/value_20000" />

        <RadioButton
            android:id="@+id/radio6"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="15000"
            android:text="@string/value_15000" />

        <RadioButton
            android:id="@+id/radio5"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="10000"
            android:text="@string/value_10000" />

        <RadioButton
            android:id="@+id/radio4"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="5000"
            android:text="@string/value_5000" />

        <RadioButton
            android:id="@+id/radio3"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="2000"
            android:text="@string/value_2000" />

        <RadioButton
            android:id="@+id/radio2"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="1000"
            android:text="@string/value_1000" />

        <RadioButton
            android:id="@+id/radio1"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="500"
            android:text="@string/value_500" />

        <RadioButton
            android:id="@+id/radio0"
            style="@style/style_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:tag="0"
            android:text="@string/zero_value" />
    </RadioGroup>

    <Button
        android:id="@+id/bank_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:padding="10dp"
        android:text="@string/bank"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/radio_group"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bank_amount_text_view"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/amount_label_shape"
        android:gravity="center"
        android:padding="20dp"
        android:tag="0"
        android:text="@string/zero_value"
        android:textColor="#0060E9"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/restore_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/restore"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bank_amount_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
